# trading-wiki

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  LICENSE  PROJECT_PLAN.md  README.md  cli.py  content_inventory.example.md  content_inventory.md  project-overview.html  pyproject.toml
.github/workflows/: ci.yml
migrations/: 0001-init.sql  0002-chunks.sql  0003-trade-examples.sql  0004-concepts.sql  0005-pass2-runs.sql  0006-concept-resolutions.sql  0007-strategies.sql  0008-pass2-runs-widen-extractor.sql  0009-setups.sql  0010-rules-and-market-conditions.sql  0011-entity-relationships.sql  0012-review-queue.sql  0013-charts.sql
prompts/: pass1.md  pass2_concept.md  pass2_concept_blind.md  pass2_market_condition.md  pass2_rule.md  pass2_setup.md  pass2_strategy.md  pass2_trade_example.md  pass2_trade_example_blind.md  pass2_trade_example_v2.md  pass4_relationship.md
tests/: conftest.py
tests/core/: test_audio.py  test_db.py  test_llm.py  test_logging.py  test_pasted_text.py  test_secrets.py  test_storage.py  test_transcribe.py  test_youtube.py
tests/extractors/: test_pass1.py  test_pass1_integration.py
tests/extractors/pass2/: test_ablation_artifacts.py  test_ablation_audit.py  test_ablation_cli.py  test_ablation_diff.py  test_ablation_integration.py  test_ablation_sampler.py  test_ablation_strip_fields.py  test_concept.py  test_config.py  test_corrective_reextract.py  test_corrective_reextract_cli.py  test_dispatcher.py  test_pass2_integration.py  test_price_audit.py  test_trade_example.py
tests/fixtures/: transcript_short.json
tests/handlers/: test_base.py  test_course_platform.py  test_discord.py  test_local_video.py  test_stubs.py  test_youtube.py
tests/pass2b/: test_queue.py
tests/review/: test_findings.py  test_sampling.py
trading_wiki/: cli.py  config.py
trading_wiki/core/: audio.py  db.py  llm.py  logging.py  pasted_text.py  secrets.py  storage.py  transcribe.py  youtube.py
trading_wiki/extractors/: pass1.py
trading_wiki/extractors/pass2/: __init__.py  (+10 more)
trading_wiki/handlers/: article.py  base.py  course_platform.py  discord.py  epub.py  local_video.py  pdf.py  youtube.py
trading_wiki/pass2b/: __init__.py  queue.py
trading_wiki/pass2c/: __init__.py  chart_extractor.py
trading_wiki/review/: __init__.py  app.py  findings.py  sampling.py
(+5 files in other folders)
