[project]
name = "trading-wiki"
version = "0.1.0"
description = "Knowledge wiki + acid-test trading bot built on v1 source and other ingested trading content"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "hencray" }]
dependencies = [
    "pydantic>=2.10",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "yoyo-migrations>=9.0",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
trading-wiki = "trading_wiki.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trading_wiki"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "ANN",  # flake8-annotations (drives strict typing)
    "PT",   # flake8-pytest-style
    "TID",  # flake8-tidy-imports
]
ignore = [
    "ANN401",  # allow Any for genuine escape-hatch use
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]  # tests don't need type annotations

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "yoyo.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=trading_wiki",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["trading_wiki"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
